--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
     "mysql": "^2.18.1",
+    "rss-parser": "^3.13.0",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1"
   }
