--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.8.1",
     "bootstrap": "^5.3.3",
     "class-variance-authority": "^0.7.1",
+    "file-saver": "^2.0.5",
     "jspdf": "^3.0.0",
     "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.477.0",
